--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'kodilla-good-patterns'
 include 'com.kodilla.spring.intro'
 include 'kodilla-spring-intro'
 include 'kodilla-patterns'
+include 'kodilla-jdbc'
 
