--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'com.kodilla.spring.intro'
 include 'kodilla-spring-intro'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
+include 'kodilla-testing2'
 
